# simple-contract-rs

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs
